<?xml version="1.0"?>
<package format="2">
  <name>octomap_server_contact</name>
  <version>0.0.0</version>
  <description>The octomap_server_contact package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>octomap_server</depend>
  <depend>tf2_ros</depend>
  <depend>jsk_recognition_msgs</depend>

</package>
